k8s/deployment-products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api-deployment
  namespace: dev
  labels:
    app: products-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
    spec:
      serviceAccountName: external-secrets 
      initContainers: # <-- ADD THIS BLOCK
      - name: check-db-ready
        image: busybox:1.36
        command: ['sh', '-c', 
          'until nc -z -w 1 ${DB_HOST} 5432; do echo waiting for db; sleep 2; done;']
      containers:
      - name: products-api
        image: 440491339319.dkr.ecr.us-east-1.amazonaws.com/eks-microservices-products-api:v2.3.1
        imagePullPolicy: Always
        
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
            
        ports:
        - containerPort: 8000
        
        # Configuration Injection: ConfigMap for non-sensitive data
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
          
        # Security Requirement: Pod Security Standards (non-root)
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
