k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: microservices
spec:
  selector:
    app: inventory
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
