k8s/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: microservices
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
