k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backends
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: products # repeat for each backend in separate NP OR use a broader selector
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 5001
